overlays/prod/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-default-dizu
    env: prod
  name: dizu
spec:
  replicas: 5
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-default-dizu
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-default-dizu
        env: prod
    spec:
      containers:
      - image: markusdhs/proddizu:157d83662a9942132e4edbc4eb71f5f5ef44405b
        imagePullPolicy: Always
        name: container-0
        ports:
        - containerPort: 80
          name: test
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
