overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dizuservice
spec:
  ports:
  - name: test
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-dizu
    env: prod
  type: ClusterIP
status:
  loadBalancer: {}
