overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: mealyingress 
spec: 
  ingressClassName: nginx 
  rules: 
  - host: argocd.fujitsu.io #Domain der Anwendung 
    http: 
      paths: 
      - backend: 
          service: 
            name: mealyservice
            port: 
              number: 80 
        path: / 
        pathType: Prefix
